--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -28,9 +28,9 @@
 
 
 <body class="h-100">
-    {% if user.is_shop %}
     <div class="container-fluid h-100">
         <div class="row h-100">
+            {% if user.is_shop %}
             <nav class="col-2 navbar navbar-dark bg-light fixed-left">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -47,22 +47,17 @@
             </nav>
             {% endif %}
 
-
-
             <main class="col-md-10 col-sm-12 mx-auto px-md-4">
                 {% if user.is_authenticated %}
                 <div class="text-center">
-                    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                        <div class="card-signin my-5">
-                            <div class="card-body">
+                    <div class="card-signin my-5">
+                        <div class="card-body">
 
-                                {% block body %}{% endblock %}
+                            {% block body %}{% endblock %}
 
-                            </div>
                         </div>
                     </div>
                 </div>
-
                 {% else %}
                 <a class="btn btn-outline-primary mr-2" href="{% url 'login' %}">ログイン</a>
                 <a class="btn btn-outline-primary " href="{% url 'accounts:signup' %}">入会</a>
@@ -89,9 +84,9 @@
 
 </body>
 {% if user.is_customer %}
-<footer>
+<footer class="bg-dark text-white text-center fixed-bottom no-gutters" style="height: 75px;">
     <div class="container-fluid">
-        <div class='row bg-dark text-white text-center fixed-bottom no-gutters' style="height: 75px;">
+        <div class='row'>
             <a class='col text-center' style="line-height: 75px;" href="{% url 'accounts:point_card_list' %}"">トップ</a>
                 <a class='col text-center' style=" line-height: 75px;" href=" {% url 'accounts:qrcode' %}">QRコード</a>
             <a class='col text-center' style="line-height: 75px;" href="{% url 'accounts:mypage' %}">マイページ</a>
