--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -2,5 +2,9 @@
 
 {% block body %}
 
+<div class="list-item">
+    <a href="{% url 'accounts:point_card_log' %}">ポイントカード使用履歴</a>
+</div>
+
 
 {% endblock %}
