フロントの変更

--- a/account/templates/account/add_point.html
+++ b/account/templates/account/add_point.html
@@ -4,6 +4,6 @@
 <form method="POST">
     {% csrf_token %}
     {{form}}
-    <button type="submit">付与</button>
+    <button class="btn btn-outline-primary" type="submit">付与</button>
 </form>
 {% endblock %}
