--- a/account/templates/account/add_stamp.html
+++ b/account/templates/account/add_stamp.html
@@ -5,6 +5,6 @@
 <form method="POST">
     {% csrf_token %}
     {{form}}
-    <button type="submit">スタンプを押す</button>
+    <button class="btn btn-outline-primary" type="submit">スタンプを押す</button>
 </form>
 {% endblock %}
