--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="list-item">
-    <a href="{% url 'accounts:point_card_log' %}">ポイントカード使用履歴</a>
+    <a class="btn btn-outline-primary" href="{% url 'accounts:point_card_log' %}">ポイントカード使用履歴</a>
 </div>
 
 
