--- a/account/templates/account/point_card_log.html
+++ b/account/templates/account/point_card_log.html
@@ -12,12 +12,13 @@
         <option value="use_point">use_point</option>
         <option value="use_stamp">use_stamp</option>
     </select>
-    
-    <button type="submit">検索する</button>
+
+    <button class="btn btn-outline-primary ml-2" type="submit">検索する</button>
+    {% csrf_token %}
 </form>
 
 
-<div class="table-responsive">
+<div class="table-responsive mt-3">
     <table width="100%" class="table table-striped table-bordered table-hover">
         <thead>
             <tr>
@@ -31,8 +32,8 @@
         </thead>
 
         <tbody>
-        {% for data in object_list %}
-　　　　     <tr class="odd gradeX text-center">
+            {% for data in object_list %}
+            　　　　 <tr class="odd gradeX text-center">
                 <td class="text-center" width="100">{{ data.date}}</td>
                 <td class="text-center" width="100">{{ data.time }}</td>
                 <td class="text-center" width="140">{{ data.action }}</td>
@@ -40,7 +41,7 @@
                 <td class="text-center" width="140">{{ data.point }}</td>
                 <td class="text-center" width="140">{{ data.number_of_stamps }}</td>
             </tr>
-        {% endfor %}
+            {% endfor %}
         </tbody>
     </table>
 </div>
