--- a/account/templates/account/read_qr_code.html
+++ b/account/templates/account/read_qr_code.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <body>
-  <video id="camera" width="300" height="300"></video>
+  <video id="camera" width="300" height="300" playsinline></video>
   <canvas id="picture" width="300" height="300" hidden></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
