--- a/account/templates/account/cashier.html
+++ b/account/templates/account/cashier.html
@@ -6,6 +6,6 @@
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <button class="btn btn-outline-primary" type="submit">会計</button>
+    <button type="submit">会計</button>
 </form>
 {% endblock %}
