--- a/account/templates/shop_top.html
+++ b/account/templates/shop_top.html
@@ -3,8 +3,9 @@
 {% block body %}
 
 <div class="list-item">
-    <a class="btn btn-outline-primary" href="{% url 'accounts:point_card_log' %}">ポイントカード使用履歴</a>
+    <a href="{% url 'accounts:read_qr_code' %}">スキャン</a>
 </div>
 
+<p>グラフ入れたいねえ</p>
 
 {% endblock %}
