--- a/account/templates/account/add_point.html
+++ b/account/templates/account/add_point.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
 <form method="POST">
     {% csrf_token %}
     {{form}}
-    <button class="btn btn-outline-primary d-block mx-auto mt-3" type="submit">付与</button>
+    <button type="submit">付与</button>
 </form>
 {% endblock %}
