--- a/account/templates/account/customize_point_card_form.html
+++ b/account/templates/account/customize_point_card_form.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
-<p class="mb-5">ポイントを使用するかスタンプを利用するか選択してください</p>
 <form method='post'>
     {% csrf_token %}
     {{form}}
-    <button type='submit' class="btn btn-outline-primary mt-3">変更</button>
+    <button type='submit'>変更</button>
 </form>
 {% endblock %}
