--- a/account/templates/account/point_card_detail.html
+++ b/account/templates/account/point_card_detail.html
@@ -2,37 +2,25 @@
 
 {% block body %}
 <p>{{type}}</p>
-<table class="mx-auto">
+<table>
     <tbody>
         <tr>
-            <th>
-                <h3>店舗名：</h3>
-            </th>
-            <td>
-                <h3>{{object.shop}}</h3>
-            </td>
+            <th>店舗名</th>
+            <td>{{object.shop}}</td>
         </tr>
         {% if object.has_point %}
         <tr>
-            <th class="pt-3">
-                <h3>ポイント：</h3>
-            </th>
-            <td class="pt-3">
-                <h3>{{object.point}}</h3>
-            </td>
+            <th>ポイント</th>
+            <td>{{object.point}}</td>
         </tr>
         {% endif %}
         {% if object.has_stamp %}
         <tr>
-            <th class="pt-3">
-                <h3>スタンプ数：</h3>
-            </th>
-            <td class="pt-3">
-                <h3>{{object.number_of_stamps}}</h3>
-            </td>
+            <th>スタンプ数</th>
+            <td>{{object.number_of_stamps}}</td>
         </tr>
         {% endif %}
     </tbody>
 </table>
-<a class="btn btn-outline-danger mt-4" href="{% url 'accounts:delete_point_card' object.pk %}">このポイントカードを消去</a>
+<a class="btn btn-outline-primary mt-4" href="{% url 'accounts:delete_point_card' object.pk %}">このポイントカードを消去</a>
 {% endblock body %}
