--- a/account/templates/registration/signup.html
+++ b/account/templates/registration/signup.html
@@ -11,6 +11,6 @@
     {% csrf_token %}
 </form> {% endcomment %}
 <h5>入会</h5>
-<a class="btn btn-outline-primary mt-2" href="{% url 'accounts:shop_signup' %}">店舗の登録はこちら</a>
-<a class="btn btn-outline-primary mt-2" href="{% url 'accounts:customer_signup' %}">ユーザーの登録はこちら</a>
+<a href="{% url 'accounts:customer_signup' %}">ユーザーの登録はこちら</a>
+<a href="{% url 'accounts:shop_signup' %}">店舗の登録はこちら</a>
 {% endblock %}
